--- a/frontend-zone/public/index.html
+++ b/frontend-zone/public/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta name="google-site-verification" content="-uqbLa_LaXR0SGaQcxTRFLFIGBGNc30dJpbqfs33xj8" />
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5985113734344517"
+     crossorigin="anonymous"></script>
     <link rel="icon" href="%PUBLIC_URL%/logosnj_1.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
